--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 <header>
         <!--Logo du site-->
-        <img src="../images/logo_site.gif" alt="Logo" class="logo">
+        <img src="images/logo_site.gif" alt="Logo" class="logo">
 
     <div class="title">
         <h1>Pixelated Dreams</h1>
