--- a/langues/Slovaque/thematic.html
+++ b/langues/Slovaque/thematic.html
@@ -79,7 +79,7 @@
     <!-- Aside -->
     
     <aside>
-        <h4><a href="https://www.youtube.com/watch?v=V586meiibb8" target="_blank"><img src="../../images/Mortal_Kombat_black.jpg" alt="Icone de Mortal Kombat"></a></h4>
+        <p><a href="https://www.youtube.com/watch?v=V586meiibb8" target="_blank"><img src="../../images/Mortal_Kombat_black.jpg" alt="Icone de Mortal Kombat"></a></p>
 
         <a href="https://www.youtube.com/watch?v=1u1wddwAKa0" target="_blank">Mortal Kombat 1</a>
         <a href="https://www.youtube.com/watch?v=Sr1bLLvsbh0" target="_blank">Techno Syndrome</a>
@@ -124,7 +124,7 @@
         môže úplne získať svoju ľudskú podobu. Škorpiónovou najobľúbenejšou a najuznávanejšou schopnosťou je jeho slávny útok kopijou, ktorý sa používa na prilákanie protivníka k sebe, 
         keď zakričí: „GET OVER HERE“ alebo „COME HERE“ v závislosti od hry. Hoci je Škorpión často chladný a uzavretý, niekedy ukáže aj svoju láskavú stránku a je veľmi čestný.</p>
 
-<h3>Zábavný fakt</h3>
+<p>Zábavný fakt</p>
 
     <p>Ed Boon (tvorca hry spolu s Johnom Tobiasom) v rozhovore pred vydaním Mortal Kombat (2011) priznal, že Škorpión je jeho najobľúbenejšia postava, a preto chce, 
         aby bol v každej hre najsilnejší.</p>
