--- a/langues/fr/thematique.html
+++ b/langues/fr/thematique.html
@@ -83,7 +83,7 @@
     <!-- Aside -->
     
     <aside>
-        <h4><a href="https://www.youtube.com/watch?v=B_SeNjJ5qyk"><img src="../../images/Mortal_Kombat_black.jpg" alt="Icone de Mortal Kombat"></a></h4>
+        <p><a href="https://www.youtube.com/watch?v=B_SeNjJ5qyk"><img src="../../images/Mortal_Kombat_black.jpg" alt="Icone de Mortal Kombat"></a></p>
 
         <a href="https://www.youtube.com/watch?v=1u1wddwAKa0" target="_blank">Mortal Kombat 1</a>
         <a href="https://www.youtube.com/watch?v=Sr1bLLvsbh0" target="_blank">Techno Syndrome</a>
@@ -91,7 +91,7 @@
         <a href="https://store.steampowered.com/app/1971870/Mortal_Kombat_1/" target="_blank"><i class="bi bi-steam"></i></a>
 
         <section class="CSS">
-            <h4>Fichiers css</h4>
+            <p>Fichiers css</p>
                 <a href="../../styles/main.css" target="_blank">Main.css</a>
                 <a href="../../styles/reset.css" target="_blank">Reset.css</a>
                 <a href="https://icons.getbootstrap.com/#install" target="_blank">Bootstrap</a>
@@ -133,7 +133,7 @@
         est sa célèbre attaque à la lance, qui est utilisée pour attirer un adversaire vers lui, lorsqu'il s'écrit "GET OVER HERE!" ou "COME HERE!" en fonction des jeux. 
         Bien que Scorpion soit souvent froid et renfermé, il montre parfois un côté bienveillant et est très honorable.</p>
 
-<h3>Fun facts</h3>
+<p>Fun facts</p>
 
     <p>Ed Boon (créateur du jeu avec John Tobias) avait avoué lors d'un interview avant la sortie de Mortal Kombat (2011) que Scorpion était son personnage préféré, 
         et d'ailleurs, c'est pour ça qu'il veut qu'il soit le plus puissant dans chaque jeu.</p>
