--- a/langues/fr/thematique.html
+++ b/langues/fr/thematique.html
@@ -83,7 +83,7 @@
     <!-- Aside -->
     
     <aside>
-        <p><a href="https://www.youtube.com/watch?v=B_SeNjJ5qyk"><img src="../../images/Mortal_Kombat_black.jpg" alt="Icone de Mortal Kombat"></a></p>
+        <a href="https://www.youtube.com/watch?v=B_SeNjJ5qyk"><img src="../../images/Mortal_Kombat_black.jpg" alt="Icone de Mortal Kombat"></a>
 
         <a href="https://www.youtube.com/watch?v=1u1wddwAKa0" target="_blank">Mortal Kombat 1</a>
         <a href="https://www.youtube.com/watch?v=Sr1bLLvsbh0" target="_blank">Techno Syndrome</a>
