--- a/langues/Slovaque/thematic.html
+++ b/langues/Slovaque/thematic.html
@@ -79,7 +79,7 @@
     <!-- Aside -->
     
     <aside>
-        <p><a href="https://www.youtube.com/watch?v=V586meiibb8" target="_blank"><img src="../../images/Mortal_Kombat_black.jpg" alt="Icone de Mortal Kombat"></a></p>
+        <a href="https://www.youtube.com/watch?v=V586meiibb8" target="_blank"><img src="../../images/Mortal_Kombat_black.jpg" alt="Icone de Mortal Kombat"></a>
 
         <a href="https://www.youtube.com/watch?v=1u1wddwAKa0" target="_blank">Mortal Kombat 1</a>
         <a href="https://www.youtube.com/watch?v=Sr1bLLvsbh0" target="_blank">Techno Syndrome</a>
